<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_shows">

    <fragment
        android:id="@+id/navigation_shows"
        android:name="br.com.amd.tvshows.ui.shows.ShowsFragment"
        android:label="@string/title_shows"
        tools:layout="@layout/fragment_shows">
        <action
            android:id="@+id/action_shows_screen_to_show_details_screen"
            app:destination="@id/navigation_show_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_show_details"
        android:name="br.com.amd.tvshows.ui.showdetails.ShowDetailsFragment"
        android:label="@string/title_show_details"
        tools:layout="@layout/fragment_show_details">

        <argument
            android:name="showId"
            android:defaultValue="0L"
            app:argType="long" />
        <action
            android:id="@+id/action_show_details_screen_to_episode_details_screen"
            app:destination="@id/episodeDetailsFragment" />

    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="br.com.amd.tvshows.ui.searchshows.SearchShowFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_search_show" >
        <action
            android:id="@+id/action_search_screen_to_show_details_screen"
            app:destination="@id/navigation_show_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="br.com.amd.tvshows.ui.favorites.FavoritesFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_favorites" >
        <action
            android:id="@+id/action_favorites_screen_to_show_details_screen"
            app:destination="@id/navigation_show_details" />
    </fragment>

    <fragment
        android:id="@+id/episodeDetailsFragment"
        android:name="br.com.amd.tvshows.ui.episodedetails.EpisodeDetailsFragment"
        android:label="@string/title_episode_details"
        tools:layout="@layout/fragment_episode_details">

        <argument
            android:name="episode"
            app:argType="br.com.amd.tvshows.ui.model.ShowEpisodeVO" />
    </fragment>
</navigation>